added new bookshelf task, not working yet

--- a/rmf_traffic_editor/resources/resource.qrc
+++ b/rmf_traffic_editor/resources/resource.qrc
@@ -3,6 +3,7 @@
 <qresource>
   <file>icons/battery.svg</file>
   <file>icons/clean.svg</file>
+  <file>icons/bookshelf.svg</file>
   <file>icons/constraint.svg</file>
   <file>icons/door.svg</file>
   <file>icons/dropoff.svg</file>
